[gd_scene load_steps=7 format=3 uid="uid://cthb0stqukkwk"]

[ext_resource type="FontFile" uid="uid://dqreqag786lld" path="res://assets/fonts/DynaPuff/DynaPuff-Regular.ttf" id="1_6c3e6"]
[ext_resource type="Script" uid="uid://c88vg4mlyuus1" path="res://views/atlas/atlas_panel.gd" id="1_spi2c"]
[ext_resource type="PackedScene" uid="uid://bmdl1bfnmpevj" path="res://views/atlas/atlas_line.tscn" id="2_6c3e6"]
[ext_resource type="Script" uid="uid://c6x8i3on4hdes" path="res://views/atlas/atlas_second_panel.gd" id="4_8dahc"]
[ext_resource type="Texture2D" uid="uid://cf1uwiogbuhdj" path="res://assets/sprites/duck.png" id="4_77rqp"]
[ext_resource type="FontFile" uid="uid://t365v4x5q70g" path="res://assets/fonts/DynaPuff/DynaPuff-Medium.ttf" id="5_8dahc"]

[node name="AtlasPanel" type="Control" node_paths=PackedStringArray("atlas_line_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spi2c")
atlas_line_list = [NodePath("ColorRect/AtlasLine"), NodePath("ColorRect/AtlasLine2"), NodePath("ColorRect/AtlasLine3"), NodePath("ColorRect/AtlasLine4")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4952073, 0.7397751, 0.47993726, 1)

[node name="Title" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 34.0
offset_top = 40.0
offset_right = 319.0
offset_bottom = 285.0
theme_override_colors/font_color = Color(0.3529412, 0.1882353, 0, 1)
theme_override_fonts/font = ExtResource("1_6c3e6")
theme_override_font_sizes/font_size = 100
text = "Bird 
Atlas"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Intro" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 309.0
offset_right = 365.0
offset_bottom = 574.0
theme_override_colors/font_color = Color(0.3524435, 0.18671894, 0, 1)
theme_override_fonts/font = ExtResource("1_6c3e6")
theme_override_font_sizes/font_size = 40
text = "You can see your birds here and breed the kind of bird which you havn't got!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GuideIntro" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 34.0
offset_top = 591.0
offset_right = 1090.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(0, 0.19578671, 0.100382514, 1)
theme_override_fonts/font = ExtResource("1_6c3e6")
theme_override_font_sizes/font_size = 30
text = "W/S : Navigate categories          A/D: Navigate birds        Esc: back to menu"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AtlasLine" parent="ColorRect" instance=ExtResource("2_6c3e6")]
layout_mode = 1
offset_top = 27.0
offset_bottom = -461.0

[node name="AtlasLine2" parent="ColorRect" instance=ExtResource("2_6c3e6")]
layout_mode = 1
offset_top = 166.0
offset_bottom = -322.0
bird_type = 1

[node name="AtlasLine3" parent="ColorRect" instance=ExtResource("2_6c3e6")]
layout_mode = 1
offset_top = 307.0
offset_bottom = -181.0
bird_type = 2

[node name="AtlasLine4" parent="ColorRect" instance=ExtResource("2_6c3e6")]
layout_mode = 1
offset_top = 446.99997
offset_bottom = -41.0
bird_type = 3

[node name="SecondPanel" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 13.0
offset_right = 1121.0
offset_bottom = 591.0
script = ExtResource("4_8dahc")

[node name="Intro" type="ColorRect" parent="SecondPanel"]
layout_mode = 2
color = Color(0.9254902, 0.5254902, 0.34509805, 1)

[node name="CommonContainer" type="Control" parent="SecondPanel/Intro"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelLabel" type="ColorRect" parent="SecondPanel/Intro/CommonContainer"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
color = Color(0.9999997, 0.7844021, 0.4814062, 1)

[node name="Level" type="Label" parent="SecondPanel/Intro/CommonContainer/LevelLabel"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.24851936, 0.26536155, 0.28307673, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 40
text = "fledgling"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginLine" type="ColorRect" parent="SecondPanel/Intro/CommonContainer"]
layout_mode = 0
offset_left = 31.0
offset_top = 86.0
offset_right = 159.0
offset_bottom = 214.0
scale = Vector2(2, 2)
color = Color(1, 0.70980394, 0.4509804, 1)

[node name="BirdIcon" type="TextureRect" parent="SecondPanel/Intro/CommonContainer/MarginLine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_77rqp")
expand_mode = 1

[node name="Name" type="Label" parent="SecondPanel/Intro/CommonContainer"]
layout_mode = 0
offset_left = -20.0
offset_top = 357.0
offset_right = 351.0
offset_bottom = 454.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 80
text = "Chirpy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SecondPanel/Intro/CommonContainer"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 0
offset_left = 77.0
offset_top = 473.0
offset_right = 237.0
offset_bottom = 523.0
theme_override_constants/separation = 5
alignment = 1

[node name="IntroContainer" type="Control" parent="SecondPanel/Intro"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DescripItem" type="ColorRect" parent="SecondPanel/Intro/IntroContainer"]
layout_mode = 0
offset_left = 356.0
offset_top = 212.0
offset_right = 656.0
offset_bottom = 262.0
color = Color(0.9999998, 0.3433319, 0.15803176, 1)

[node name="VScrollBar" type="VScrollBar" parent="SecondPanel/Intro/IntroContainer/DescripItem"]
clip_contents = true
layout_mode = 0
offset_top = 53.0
offset_right = 700.0
offset_bottom = 353.0

[node name="VBoxContainer" type="VBoxContainer" parent="SecondPanel/Intro/IntroContainer/DescripItem/VScrollBar"]
layout_mode = 0
offset_left = 34.0
offset_top = 29.0
offset_right = 674.0
offset_bottom = 429.0

[node name="DescriptionIntro" type="Label" parent="SecondPanel/Intro/IntroContainer/DescripItem/VScrollBar/VBoxContainer"]
custom_minimum_size = Vector2(640, 400)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 30
text = "A lively blue chick that just hatched, full of curiosity and boundless energy. Chirpy loves to communicate through melodious chirps and has an exceptional ear for rhythm. This little songbird can pick up even the most subtle beats and loves to experiment with different musical patterns. Her azure feathers flutter with excitement whenever she hears her favorite tunes."
autowrap_mode = 2

[node name="Description" type="Label" parent="SecondPanel/Intro/IntroContainer/DescripItem"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 40
text = "Description:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityItem" type="ColorRect" parent="SecondPanel/Intro/IntroContainer"]
layout_mode = 0
offset_left = 356.0
offset_top = 40.0
offset_right = 656.0
offset_bottom = 90.0
color = Color(0, 0.665882, 0.79356456, 1)

[node name="AbilityIntro" type="Label" parent="SecondPanel/Intro/IntroContainer/AbilityItem"]
custom_minimum_size = Vector2(640, 400)
layout_mode = 0
offset_left = 34.0
offset_top = 62.0
offset_right = 674.0
offset_bottom = 462.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 60
text = "???"
autowrap_mode = 2

[node name="Ability" type="Label" parent="SecondPanel/Intro/IntroContainer/AbilityItem"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 40
text = "ExtraAbility:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FusionContainer" type="Control" parent="SecondPanel/Intro"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SongHint" type="Label" parent="SecondPanel/Intro/FusionContainer"]
layout_mode = 0
offset_left = 299.0
offset_top = 192.0
offset_right = 1099.0
offset_bottom = 381.0
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 50
text = "How about trying a  new song like
the World's mine?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FusionPanel" type="Control" parent="SecondPanel/Intro/FusionContainer"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FailIntro" type="Label" parent="SecondPanel/Intro/FusionContainer/FusionPanel"]
layout_mode = 0
offset_left = 299.0
offset_top = 357.0
offset_right = 1099.0
offset_bottom = 546.0
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 50
text = "Cannot unlock right now
Go and find 
the bird you need!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginLine" type="ColorRect" parent="SecondPanel/Intro/FusionContainer/FusionPanel"]
layout_mode = 0
offset_left = 404.0
offset_top = 68.0
offset_right = 532.0
offset_bottom = 196.0
scale = Vector2(1.5, 1.5)
color = Color(1, 0.70980394, 0.4509804, 1)

[node name="BirdIcon_1" type="TextureRect" parent="SecondPanel/Intro/FusionContainer/FusionPanel/MarginLine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_77rqp")
expand_mode = 1

[node name="Name_1" type="Label" parent="SecondPanel/Intro/FusionContainer/FusionPanel/MarginLine"]
layout_mode = 0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 30
text = "???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Joint" type="Label" parent="SecondPanel/Intro/FusionContainer/FusionPanel"]
layout_mode = 0
offset_left = 613.0
offset_top = 104.0
offset_right = 741.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 100
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginLine2" type="ColorRect" parent="SecondPanel/Intro/FusionContainer/FusionPanel"]
layout_mode = 0
offset_left = 755.0
offset_top = 68.0
offset_right = 883.0
offset_bottom = 196.0
scale = Vector2(1.5, 1.5)
color = Color(1, 0.70980394, 0.4509804, 1)

[node name="BirdIcon_2" type="TextureRect" parent="SecondPanel/Intro/FusionContainer/FusionPanel/MarginLine2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_77rqp")
expand_mode = 1

[node name="Name_2" type="Label" parent="SecondPanel/Intro/FusionContainer/FusionPanel/MarginLine2"]
layout_mode = 0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 30
text = "???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComfirmItem" type="Control" parent="SecondPanel/Intro/FusionContainer/FusionPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ComfirmButton" type="ColorPickerButton" parent="SecondPanel/Intro/FusionContainer/FusionPanel/ComfirmItem"]
layout_mode = 0
offset_left = 538.0
offset_top = 357.0
offset_right = 838.0
offset_bottom = 437.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 16
text = "FusionComfirm "
flat = true
alignment = 0
color = Color(0.8543371, 0.41725957, 0, 1)

[node name="Label" type="Label" parent="SecondPanel/Intro/FusionContainer/FusionPanel/ComfirmItem/ComfirmButton"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 32
text = "Fusion Comfirm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Congradulation" type="Label" parent="SecondPanel/Intro/FusionContainer/FusionPanel/ComfirmItem"]
layout_mode = 0
offset_left = 299.0
offset_top = 437.0
offset_right = 1099.0
offset_bottom = 560.0
theme_override_fonts/font = ExtResource("5_8dahc")
theme_override_font_sizes/font_size = 32
text = "Congradulation to get all the birds you need!
press enter to unlock the new bird!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
